Add tests, fix issues revealed in tests
